# nxengine-evo

./: CMakeLists.txt  ObjManager.cpp  ObjManager.h  caret.cpp  caret.h  console.cpp  console.h  debug.cpp  debug.h  floattext.cpp  floattext.h  game.cpp  game.h  input.cpp  input.h  inventory.cpp  inventory.h  main.cpp  map.cpp  map.h  map_system.cpp  maprecord.h  niku.cpp  niku.h  nx.h  nx_math.cpp  nx_math.h  object.cpp  object.h  p_arms.cpp  p_arms.h  player.cpp  player.h  playerstats.cpp  profile.cpp  profile.h  runastyle.cmd  screeneffect.cpp  screeneffect.h  settings.cpp  (+13 more)
TextBox/: ItemImage.cpp  ItemImage.h  SaveSelect.cpp  SaveSelect.h  StageSelect.cpp  StageSelect.h  TextBox.cpp  TextBox.h  YesNoPrompt.cpp  YesNoPrompt.h
ai/: IrregularBBox.cpp  IrregularBBox.h  ai.cpp  balrog_common.cpp
ai/almond/: almond.cpp
ai/boss/: balfrog.cpp  balfrog.h  ballos.cpp  ballos.h  core.cpp  core.h  heavypress.cpp  heavypress.h  ironhead.cpp  ironhead.h  omega.cpp  omega.h  sisters.cpp  sisters.h  undead_core.cpp  undead_core.h  x.cpp  x.h
ai/egg/: egg.cpp  egg2.cpp  igor.cpp
ai/final_battle/: balcony.cpp  doctor.cpp  doctor_common.cpp  doctor_frenzied.cpp  final_misc.cpp  misery.cpp  sidekicks.cpp
ai/first_cave/: first_cave.cpp
ai/hell/: ballos_misc.cpp  ballos_priest.cpp  hell.cpp
ai/last_cave/: last_cave.cpp
ai/maze/: balrog_boss_missiles.cpp  critter_purple.cpp  gaudi.cpp  labyrinth_m.cpp  maze.cpp  pooh_black.cpp
ai/npc/: balrog.cpp  curly.cpp  curly_ai.cpp  misery.cpp  npcguest.cpp  npcplayer.cpp  npcregu.cpp
ai/oside/: oside.cpp
ai/plantation/: plantation.cpp
ai/sand/: curly_boss.cpp  puppy.cpp  sand.cpp  toroko_frenzied.cpp
ai/sym/: smoke.cpp  sym.cpp
ai/village/: balrog_boss_running.cpp  ma_pignon.cpp  village.cpp
ai/weapons/: blade.cpp  bubbler.cpp  fireball.cpp  missile.cpp  nemesis.cpp  polar_mgun.cpp  snake.cpp  spur.cpp  weapons.cpp  weapons.h  whimstar.cpp  whimstar.h
ai/weed/: balrog_boss_flying.cpp  frenzied_mimiga.cpp  weed.cpp
autogen/: AssignSprites.cpp  objnames.cpp  objnames.h
common/: DBuffer.cpp  DBuffer.h  InitList.cpp  InitList.h  basics.h  bufio.h  misc.cpp  misc.h  stat.cpp
endgame/: CredReader.cpp  CredReader.h  credits.cpp  credits.h  island.cpp  misc.cpp
extract/: crc.cpp  extractfiles.cpp  extractpxt.cpp  extractstages.cpp
graphics/: font.cpp  font.h  graphics.cpp  graphics.h  nx_icon.h  nxsurface.cpp  nxsurface.h  pngfuncs.cpp  safemode.cpp  safemode.h  screenshot.cpp  sprites.cpp  sprites.h  tileset.cpp  tileset.h
intro/: intro.cpp  title.cpp
lpng/: libpng16d.lib
pause/: dialog.cpp  dialog.h  message.cpp  message.h  objects.cpp  options.cpp  options.h  pause.cpp
siflib/: sectSprites.cpp  sectSprites.h  sectStringArray.cpp  sectStringArray.h  sif.cpp  sif.h  sifloader.cpp  sifloader.h
sound/: org.cpp  org.h  pxt.cpp  pxt.h  sound.cpp  sslib.cpp  sslib.h
tools/BoostLab_0411/: entityInfo.txt  flagnames.txt  sfxList.txt
zlib/: zlib.lib
(+52 files in other folders)
